<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>MainWindow</class>
 <widget class="QMainWindow" name="MainWindow">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>836</width>
    <height>612</height>
   </rect>
  </property>
  <property name="font">
   <font>
    <family>黑体</family>
    <pointsize>11</pointsize>
   </font>
  </property>
  <property name="windowTitle">
   <string>MainWindow</string>
  </property>
  <widget class="QWidget" name="centralwidget">
   <property name="styleSheet">
    <string notr="true">QWidget#centralwidget{
	background:rgb(30, 30, 30);
}</string>
   </property>
   <layout class="QHBoxLayout" name="horizontalLayout" stretch="3,7">
    <property name="spacing">
     <number>0</number>
    </property>
    <property name="sizeConstraint">
     <enum>QLayout::SetDefaultConstraint</enum>
    </property>
    <item>
     <widget class="QWidget" name="widget_3" native="true">
      <property name="styleSheet">
       <string notr="true">QFrame{
      color:rgb(60, 60, 60);
      background:rgb(30,30,30);
      border-top:1px solid darkGray;
      border-bottom:1px solid darkGray;
      border-right:1px solid darkGray;
      border-left:1px solid darkGray;
      border-top-right-radius:5px;
      border-bottom-right-radius:5px; 
      border-top-left-radius:5px;
      border-bottom-left-radius:5px; 
}
QLabel{
	border:none;
    color:white;
    font-size:16px;
    font-weight:700;
	font-family: &quot;微软雅黑&quot;;
}</string>
      </property>
      <layout class="QVBoxLayout" name="verticalLayout">
       <item>
        <widget class="QFrame" name="frame_4">
         <property name="styleSheet">
          <string notr="true">QPushButton{
	color:white;
	background:rgb(50,50,50); ;
    border-radius:3px;
	font-size:15px;
    font-weight:700;
	font-family: &quot;微软雅黑&quot;;
}
QPushButton:hover{
	color:rgb(42,105,192);
    font-size:15px;
    font-weight:700;
}</string>
         </property>
         <property name="frameShape">
          <enum>QFrame::StyledPanel</enum>
         </property>
         <property name="frameShadow">
          <enum>QFrame::Raised</enum>
         </property>
         <layout class="QVBoxLayout" name="verticalLayout_2">
          <item>
           <widget class="QPushButton" name="viewManual">
            <property name="text">
             <string>查看使用说明</string>
            </property>
           </widget>
          </item>
         </layout>
        </widget>
       </item>
       <item>
        <widget class="QFrame" name="frame">
         <property name="styleSheet">
          <string notr="true">QFrame#frame{
      color:rgb(60, 60, 60);
      background:rgb(30,30,30);
      border-top:1px solid darkGray;
      border-bottom:1px solid darkGray;
      border-right:1px solid darkGray;
      border-left:1px solid darkGray;
      border-top-right-radius:5px;
      border-bottom-right-radius:5px; 
      border-top-left-radius:5px;
      border-bottom-left-radius:5px; 
}

QComboBox{
	font-size:12px;
    font-weight:700;
	font-family: &quot;微软雅黑&quot;;
}

QPushButton{
	color:white;
	background:rgb(50,50,50); ;
    border-radius:3px;
	font-size:15px;
    font-weight:700;
	font-family: &quot;微软雅黑&quot;;
}
QPushButton:hover{
	color:rgb(42,105,192);
    font-size:15px;
    font-weight:700;
}
</string>
         </property>
         <property name="frameShape">
          <enum>QFrame::StyledPanel</enum>
         </property>
         <property name="frameShadow">
          <enum>QFrame::Raised</enum>
         </property>
         <layout class="QGridLayout" name="gridLayout_5">
          <item row="0" column="0">
           <layout class="QGridLayout" name="gridLayout" columnstretch="1,4">
            <item row="4" column="0">
             <widget class="QLabel" name="label_4">
              <property name="font">
               <font>
                <family>微软雅黑</family>
                <pointsize>-1</pointsize>
                <weight>87</weight>
                <bold>true</bold>
               </font>
              </property>
              <property name="text">
               <string>操作：</string>
              </property>
             </widget>
            </item>
            <item row="0" column="0">
             <widget class="QLabel" name="label_2">
              <property name="font">
               <font>
                <family>微软雅黑</family>
                <pointsize>-1</pointsize>
                <weight>87</weight>
                <bold>true</bold>
               </font>
              </property>
              <property name="text">
               <string>端口：</string>
              </property>
             </widget>
            </item>
            <item row="4" column="1">
             <widget class="QPushButton" name="OpenorClose">
              <property name="font">
               <font>
                <family>微软雅黑</family>
                <pointsize>-1</pointsize>
                <weight>87</weight>
                <bold>true</bold>
               </font>
              </property>
              <property name="text">
               <string>打开串口</string>
              </property>
             </widget>
            </item>
            <item row="1" column="0">
             <spacer name="verticalSpacer">
              <property name="orientation">
               <enum>Qt::Vertical</enum>
              </property>
              <property name="sizeType">
               <enum>QSizePolicy::Fixed</enum>
              </property>
              <property name="sizeHint" stdset="0">
               <size>
                <width>20</width>
                <height>10</height>
               </size>
              </property>
             </spacer>
            </item>
            <item row="2" column="0">
             <widget class="QLabel" name="label_3">
              <property name="font">
               <font>
                <family>微软雅黑</family>
                <pointsize>-1</pointsize>
                <weight>87</weight>
                <bold>true</bold>
               </font>
              </property>
              <property name="text">
               <string>波特率：</string>
              </property>
             </widget>
            </item>
            <item row="2" column="1">
             <widget class="QComboBox" name="baudRate">
              <property name="sizeAdjustPolicy">
               <enum>QComboBox::AdjustToContentsOnFirstShow</enum>
              </property>
              <property name="frame">
               <bool>true</bool>
              </property>
              <item>
               <property name="text">
                <string>4800</string>
               </property>
              </item>
              <item>
               <property name="text">
                <string>9600</string>
               </property>
              </item>
              <item>
               <property name="text">
                <string>115200</string>
               </property>
              </item>
             </widget>
            </item>
            <item row="0" column="1">
             <widget class="QComboBox" name="portId"/>
            </item>
            <item row="3" column="0">
             <spacer name="verticalSpacer_2">
              <property name="orientation">
               <enum>Qt::Vertical</enum>
              </property>
              <property name="sizeType">
               <enum>QSizePolicy::Fixed</enum>
              </property>
              <property name="sizeHint" stdset="0">
               <size>
                <width>20</width>
                <height>10</height>
               </size>
              </property>
             </spacer>
            </item>
           </layout>
          </item>
         </layout>
        </widget>
       </item>
       <item>
        <widget class="QFrame" name="frame_2">
         <property name="styleSheet">
          <string notr="true">QFrame#frame{
      color:rgb(60, 60, 60);
      background:rgb(30,30,30);
      border-top:1px solid darkGray;
      border-bottom:1px solid darkGray;
      border-right:1px solid darkGray;
      border-left:1px solid darkGray;
      border-top-right-radius:5px;
      border-bottom-right-radius:5px; 
      border-top-left-radius:5px;
      border-bottom-left-radius:5px; 
}

QLineEdit{
	font-size:12px;
    font-weight:700;
	font-family: &quot;微软雅黑&quot;;
}

QPushButton{
	color:white;
	background:rgb(50,50,50); ;
    border-radius:3px;
	font-size:15px;
    font-weight:700;
	font-family: &quot;微软雅黑&quot;;
}
QPushButton:hover{
	color:rgb(42,105,192);
    font-size:15px;
    font-weight:700;
}</string>
         </property>
         <property name="frameShape">
          <enum>QFrame::StyledPanel</enum>
         </property>
         <property name="frameShadow">
          <enum>QFrame::Raised</enum>
         </property>
         <layout class="QGridLayout" name="gridLayout_4">
          <item row="0" column="0">
           <layout class="QGridLayout" name="gridLayout_3" columnstretch="1,2,2">
            <item row="9" column="2">
             <widget class="QPushButton" name="sendPIDData">
              <property name="font">
               <font>
                <family>微软雅黑</family>
                <pointsize>-1</pointsize>
                <weight>87</weight>
                <bold>true</bold>
               </font>
              </property>
              <property name="text">
               <string>发送数据</string>
              </property>
             </widget>
            </item>
            <item row="2" column="0">
             <spacer name="verticalSpacer_3">
              <property name="orientation">
               <enum>Qt::Vertical</enum>
              </property>
              <property name="sizeType">
               <enum>QSizePolicy::Fixed</enum>
              </property>
              <property name="sizeHint" stdset="0">
               <size>
                <width>20</width>
                <height>10</height>
               </size>
              </property>
             </spacer>
            </item>
            <item row="3" column="0">
             <widget class="QLabel" name="label_6">
              <property name="font">
               <font>
                <family>微软雅黑</family>
                <pointsize>-1</pointsize>
                <weight>87</weight>
                <bold>true</bold>
               </font>
              </property>
              <property name="text">
               <string>心率:</string>
              </property>
             </widget>
            </item>
            <item row="5" column="0">
             <widget class="QLabel" name="label_7">
              <property name="font">
               <font>
                <family>微软雅黑</family>
                <pointsize>-1</pointsize>
                <weight>87</weight>
                <bold>true</bold>
               </font>
              </property>
              <property name="text">
               <string>体动:      </string>
              </property>
             </widget>
            </item>
            <item row="4" column="0">
             <spacer name="verticalSpacer_4">
              <property name="orientation">
               <enum>Qt::Vertical</enum>
              </property>
              <property name="sizeType">
               <enum>QSizePolicy::Fixed</enum>
              </property>
              <property name="sizeHint" stdset="0">
               <size>
                <width>20</width>
                <height>10</height>
               </size>
              </property>
             </spacer>
            </item>
            <item row="1" column="0">
             <widget class="QLabel" name="label_5">
              <property name="font">
               <font>
                <family>微软雅黑</family>
                <pointsize>-1</pointsize>
                <weight>87</weight>
                <bold>true</bold>
               </font>
              </property>
              <property name="text">
               <string>呼吸率:</string>
              </property>
             </widget>
            </item>
            <item row="6" column="0">
             <spacer name="verticalSpacer_5">
              <property name="orientation">
               <enum>Qt::Vertical</enum>
              </property>
              <property name="sizeType">
               <enum>QSizePolicy::Fixed</enum>
              </property>
              <property name="sizeHint" stdset="0">
               <size>
                <width>20</width>
                <height>10</height>
               </size>
              </property>
             </spacer>
            </item>
            <item row="9" column="0">
             <widget class="QLabel" name="label_8">
              <property name="font">
               <font>
                <family>微软雅黑</family>
                <pointsize>-1</pointsize>
                <weight>87</weight>
                <bold>true</bold>
               </font>
              </property>
              <property name="text">
               <string>操作：</string>
              </property>
             </widget>
            </item>
            <item row="7" column="0">
             <widget class="QLabel" name="label_9">
              <property name="text">
               <string>距离值：</string>
              </property>
             </widget>
            </item>
            <item row="8" column="0">
             <spacer name="verticalSpacer_6">
              <property name="orientation">
               <enum>Qt::Vertical</enum>
              </property>
              <property name="sizeType">
               <enum>QSizePolicy::Fixed</enum>
              </property>
              <property name="sizeHint" stdset="0">
               <size>
                <width>20</width>
                <height>10</height>
               </size>
              </property>
             </spacer>
            </item>
            <item row="9" column="1">
             <widget class="QPushButton" name="pushButton">
              <property name="text">
               <string>清空数据</string>
              </property>
             </widget>
            </item>
            <item row="7" column="1" colspan="2">
             <widget class="QLineEdit" name="lineEdit_4"/>
            </item>
            <item row="5" column="1" colspan="2">
             <widget class="QLineEdit" name="lineEdit_3"/>
            </item>
            <item row="3" column="1" colspan="2">
             <widget class="QLineEdit" name="lineEdit_2"/>
            </item>
            <item row="1" column="1" colspan="2">
             <widget class="QLineEdit" name="lineEdit"/>
            </item>
           </layout>
          </item>
         </layout>
        </widget>
       </item>
       <item>
        <widget class="QFrame" name="frame_3">
         <property name="styleSheet">
          <string notr="true">QPushButton{
	color:white;
	background:rgb(50,50,50); ;
    border-radius:3px;
	font-size:15px;
    font-weight:700;
	font-family: &quot;微软雅黑&quot;;
}
QPushButton:hover{
	color:rgb(42,105,192);
    font-size:15px;
    font-weight:700;
}</string>
         </property>
         <property name="frameShape">
          <enum>QFrame::StyledPanel</enum>
         </property>
         <property name="frameShadow">
          <enum>QFrame::Raised</enum>
         </property>
         <layout class="QVBoxLayout" name="verticalLayout_4">
          <item>
           <widget class="QSplitter" name="splitter">
            <property name="orientation">
             <enum>Qt::Vertical</enum>
            </property>
            <property name="handleWidth">
             <number>1</number>
            </property>
            <widget class="QPushButton" name="openOscill">
             <property name="text">
              <string>打开示波器</string>
             </property>
            </widget>
            <widget class="QPushButton" name="stopOscill">
             <property name="text">
              <string>垂直缩放</string>
             </property>
             <property name="iconSize">
              <size>
               <width>16</width>
               <height>16</height>
              </size>
             </property>
             <property name="autoDefault">
              <bool>false</bool>
             </property>
             <property name="default">
              <bool>false</bool>
             </property>
             <property name="flat">
              <bool>false</bool>
             </property>
            </widget>
            <widget class="QPushButton" name="sendData">
             <property name="text">
              <string>发送数据</string>
             </property>
            </widget>
            <widget class="QPushButton" name="clearReceived">
             <property name="text">
              <string>清空接收区</string>
             </property>
            </widget>
           </widget>
          </item>
         </layout>
        </widget>
       </item>
      </layout>
     </widget>
    </item>
    <item>
     <widget class="QWidget" name="widget_2" native="true">
      <property name="styleSheet">
       <string notr="true">QLabel{
	border:none;
    color:white;
    font-size:26px;
    font-weight:700;
	font-family: &quot;楷体&quot;;
}
QWidget#customPlot{
	color:#232C51;
    background:rgb(47,48,48);
    border-top:1px solid darkGray;
    border-bottom:1px solid darkGray;
    border-right:1px solid darkGray;
    border-left:1px solid darkGray;
    border-top-right-radius:10px;
    border-bottom-right-radius:10px; 
    border-top-left-radius:10px;
    border-bottom-left-radius:10px;
}
QTextEdit{
    color: white;
	font-family: &quot;JetBrains Mono&quot;;
    background:rgb(75,75,75);
    border-top:1px solid darkGray;
    border-bottom:1px solid darkGray;
    border-right:1px solid darkGray;
    border-left:1px solid darkGray;
    border-top-right-radius:10px;
    border-bottom-right-radius:10px; 
    border-top-left-radius:10px;
    border-bottom-left-radius:10px; 
}
QTextBrowser{
    color: white;
	font-size: 12px;
	font-family: &quot;JetBrains Mono&quot;;
    background:rgb(75,75,75);
    border-top:1px solid darkGray;
    border-bottom:1px solid darkGray;
    border-right:1px solid darkGray;
    border-left:1px solid darkGray;
    border-top-right-radius:10px;
    border-bottom-right-radius:10px; 
    border-top-left-radius:10px;
    border-bottom-left-radius:10px;
}</string>
      </property>
      <layout class="QGridLayout" name="gridLayout_2" rowstretch="1,6,0,3">
       <item row="3" column="0">
        <widget class="QTextEdit" name="textEdit"/>
       </item>
       <item row="3" column="1">
        <widget class="QTextBrowser" name="textBrowser"/>
       </item>
       <item row="0" column="0" colspan="2">
        <widget class="QLabel" name="label">
         <property name="font">
          <font>
           <family>楷体</family>
           <pointsize>-1</pointsize>
           <weight>87</weight>
           <bold>true</bold>
          </font>
         </property>
         <property name="text">
          <string>数据示波器</string>
         </property>
         <property name="alignment">
          <set>Qt::AlignCenter</set>
         </property>
        </widget>
       </item>
       <item row="1" column="0" colspan="2">
        <widget class="QCustomPlot" name="customPlot" native="true"/>
       </item>
       <item row="2" column="0">
        <widget class="QLabel" name="label_10">
         <property name="styleSheet">
          <string notr="true">QLabel{
	border:none;
    color:white;
    font-size:15px;
    font-weight:700;
	font-family: &quot;微软雅黑&quot;;
}</string>
         </property>
         <property name="text">
          <string>发送区</string>
         </property>
        </widget>
       </item>
       <item row="2" column="1">
        <widget class="QLabel" name="label_11">
         <property name="styleSheet">
          <string notr="true">QLabel{
	border:none;
    color:white;
    font-size:15px;
    font-weight:700;
	font-family: &quot;微软雅黑&quot;;
}</string>
         </property>
         <property name="text">
          <string>接收区</string>
         </property>
        </widget>
       </item>
      </layout>
     </widget>
    </item>
   </layout>
  </widget>
  <widget class="QStatusBar" name="statusbar"/>
  <action name="actionHelp">
   <property name="icon">
    <iconset resource="myresource.qrc">
     <normaloff>:/Images/Icons/gtk-help.png</normaloff>:/Images/Icons/gtk-help.png</iconset>
   </property>
   <property name="text">
    <string>使用说明</string>
   </property>
   <property name="shortcut">
    <string>Ctrl+H</string>
   </property>
  </action>
 </widget>
 <customwidgets>
  <customwidget>
   <class>QCustomPlot</class>
   <extends>QWidget</extends>
   <header>qcustomplot.h</header>
   <container>1</container>
  </customwidget>
 </customwidgets>
 <resources>
  <include location="myresource.qrc"/>
 </resources>
 <connections/>
</ui>
